[metadata]
name = jetkubeload
author = Alex Krzos
author-email = akrzos@redhat.com
summary = Workloads for OpenShift/Kubernetes
description-file = README.md
url = https://github.com/akrzos/jetkubeload
home-page = https://github.com/akrzos/jetkubeload
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[files]
packages = jetkubeload

[entry_points]
console_scripts = jetkubeload = jetkubeload.jetkubeload:main
